Fix navbar not appearing on iphone screen

--- a/css/templatemo-dream-pulse.css
+++ b/css/templatemo-dream-pulse.css
@@ -131,9 +131,12 @@ a {
 /* Hide scrollbar */
 .tm-sidebar {
   overflow-y: scroll;
-  scrollbar-width: none; /* Firefox */
-  -ms-overflow-style: none; /* IE 10+ */
+  scrollbar-width: none;
+  /* Firefox */
+  -ms-overflow-style: none;
+  /* IE 10+ */
 }
+
 .tm-sidebar::-webkit-scrollbar {
   /* WebKit */
   width: 0;
@@ -153,7 +156,7 @@ a {
   margin-right: 0;
 }
 
-.tm-main-nav > li > a {
+.tm-main-nav>li>a {
   color: white;
 }
 
@@ -195,9 +198,11 @@ a {
   0% {
     opacity: 1;
   }
+
   50% {
     opacity: 0.1;
   }
+
   100% {
     opacity: 1;
   }
@@ -344,7 +349,7 @@ a {
 }
 
 .tm-gallery-item figure figcaption,
-.tm-gallery-item figure figcaption > a {
+.tm-gallery-item figure figcaption>a {
   position: absolute;
   top: 0;
   left: 0;
@@ -357,7 +362,7 @@ a {
 
 /* Anchor will cover the whole item by default */
 /* For some effects it will show as a button */
-.tm-gallery-item figure figcaption > a {
+.tm-gallery-item figure figcaption>a {
   z-index: 1000;
   text-indent: 200%;
   white-space: nowrap;
@@ -624,9 +629,9 @@ figure.effect-bubba:hover p {
     top: 5px;
   }
 
-  .navbar-toggler:focus {
+  /* .navbar-toggler:focus {
     outline: none;
-  }
+  } */
 
   .tm-sidebar.show {
     left: 0;
